<resources>
    <string name="app_name">Flights</string>

    <!-- Fontawesome -->
    <string name="fa_icon_filter">&#xf160;</string>
    <string name="fa_icon_sort">&#xf0b0;</string>

    <!--Main Activity -->
    <string name="main_title">VOOS</string>
    <string name="main_title_1">VOO DE IDA</string>
    <string name="main_title_2">VOO DE VOLTA</string>
    <string name="main_filter">FILTRAR</string>
    <string name="main_sort">ORDENAR</string>
    <string name="main_count_filter">Com filtro:</string>
    <string name="main_count_filter_flight">Voo</string>
    <string name="main_count_filter_flights">Voos</string>
    <string name="main_empty_list">Não há dados para serem exibidos.</string>
    <string name="main_error_service">Ocorreu um erro ao buscar os dados</string>

    <!--Main Adapter -->
    <string name="main_adapter_price">R$ %s</string>
    <string name="main_adapter_buy">Comprar</string>
    <string name="main_adapter_stop">%s, %d parada</string>
    <string name="main_adapter_stops">%s, %d paradas</string>
    <string name="main_adapter_tax_price">Valor total c/ taxas</string>

    <!--Sort Activity -->
    <string name="sort_title">ORDENAÇÃO</string>
    <string name="sort_subtitle">Ordenar</string>
    <string name="sort_lowest_price">Menor preço</string>
    <string name="sort_biggest_price">Maior preço</string>
    <string name="sort_price_time">Menor Preço e Menor tempo de voo</string>
    <string name="sort_button">Aplicar ordenação</string>

    <!--Filter Activity -->
    <string name="filter_title">FILTROS</string>
    <string name="filter_clean_menu">LIMPAR</string>
    <string name="filter_subtitle_time">Filtrar por Horário</string>
    <string name="filter_morning">MANHÃ</string>
    <string name="filter_afternoon">TARDE</string>
    <string name="filter_night">NOITE</string>
    <string name="filter_dawn">MADRUGADA</string>
    <string name="filter_morning_desc"> - 06:00 às 11:59 (%d VOOS)</string>
    <string name="filter_morning_desc_only"> - 06:00 às 11:59 (1 VOO)</string>
    <string name="filter_afternoon_desc"> - 12:00 às 17:59 (%d VOOS)</string>
    <string name="filter_afternoon_desc_only"> - 12:00 às 17:59 (1 VOO)</string>
    <string name="filter_night_desc"> - 18:00 às 23:59 (%d VOOS)</string>
    <string name="filter_night_desc_only"> - 18:00 às 23:59 (1 VOO)</string>
    <string name="filter_dawn_desc"> - 00:00 às 05:59 (%d VOOS)</string>
    <string name="filter_dawn_desc_only"> - 00:00 às 05:59 (1 VOO)</string>
    <string name="filter_subtitle_stop">Filtrar por Paradas</string>
    <string name="filter_no_stop">VOO DIRETO</string>
    <string name="filter_one_stop">1 PARADA</string>
    <string name="filter_stop_desc"> (%d VOOS)</string>
    <string name="filter_stop_desc_only"> (1 VOO)</string>
    <string name="filter_button_filter">Aplicar filtro</string>
</resources>










