<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".49"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="22.5dp">

                    <TextView
                        android:id="@+id/txtFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:text="CNF"/>

                    <TextView
                        android:id="@+id/txtTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="37dp"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"
                        android:text="GRU"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/txtDepartureTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="19dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="18dp"
                        android:textColor="@color/text_color"
                        android:text="13:30"/>

                    <View
                        android:layout_width="18dp"
                        android:layout_height="1dp"
                        android:background="@color/gray"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"/>

                    <TextView
                        android:id="@+id/txtArrivalTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="18dp"
                        android:textColor="@color/text_color"
                        android:text="13:30"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDurationStop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:text="@string/main_adapter_stops" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_weight=".01">

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".49"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="right"
                    android:textSize="24sp"
                    android:text="R$ 144,50"/>

                <Button
                    android:id="@+id/btnBuy"
                    android:layout_width="125dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="right"
                    android:textColor="@color/white"
                    android:elevation="3dp"
                    android:shadowColor="@color/colorAccent"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/main_adapter_buy"
                    android:textSize="12sp"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="26dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="right"
                    android:textSize="10sp"
                    android:textColor="@color/text_color"
                    android:text="@string/main_adapter_tax_price"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>










